--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                 <td style="border:1px solid #000000;text-align:left;">&nbsp;<a href="basic1.png">gazou1</a><br><a href="basic2.png">gazou2</a><br><a href="basic3.png">gazou3</a></td>
                 <td style="border:1px solid #000000;text-align:left;">&nbsp;３枚のスクリーンショット</td>
             </tr><tr>
-                <td style="border:1px solid #000000;text-align:left;">&nbsp;</td>
-                <td style="border:1px solid #000000;text-align:left;">&nbsp;</td>
-                <td style="border:1px solid #000000;text-align:left;">&nbsp;</td>
-                <td style="border:1px solid #000000;text-align:left;">&nbsp;</td>
+                <td style="border:1px solid #000000;text-align:left;">&nbsp;期日：5\11<br>提出：5/17</td>
+                <td style="border:1px solid #000000;text-align:left;">&nbsp;入れ替え</td>
+                <td style="border:1px solid #000000;text-align:left;">&nbsp;<a href="basic4.png">gazou4</a></td>
+                <td style="border:1px solid #000000;text-align:left;">&nbsp;1枚のスクリーンショット</td>
             </tr><tr>
                 <td style="border:1px solid #000000;text-align:left;">&nbsp;</td>
                 <td style="border:1px solid #000000;text-align:left;">&nbsp;</td>
