--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 <td style="border:1px solid #000000;text-align:left;">&nbsp;<a href="basic4.png">gazou4</a></td>
                 <td style="border:1px solid #000000;text-align:left;">&nbsp;1枚のスクリーンショット</td>
             </tr><tr>
-                <td style="border:1px solid #000000;text-align:left;">&nbsp;</td>
-                <td style="border:1px solid #000000;text-align:left;">&nbsp;</td>
-                <td style="border:1px solid #000000;text-align:left;">&nbsp;</td>
-                <td style="border:1px solid #000000;text-align:left;">&nbsp;</td>
+                <td style="border:1px solid #000000;text-align:left;">&nbsp;期日：5/18<br>提出：5/18</td>
+                <td style="border:1px solid #000000;text-align:left;">&nbsp;四角</td>
+                <td style="border:1px solid #000000;text-align:left;">&nbsp;<a href="basic5.png">gazou5</a></td>
+                <td style="border:1px solid #000000;text-align:left;">&nbsp;だんだんエラーも増えてきて難しくなってきました。</td>
             </tr>
         </tbody>
     </table>
