--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
                 <td style="border:1px solid #000000;text-align:left;">&nbsp;四角</td>
                 <td style="border:1px solid #000000;text-align:left;">&nbsp;<a href="basic5.png">gazou5</a></td>
                 <td style="border:1px solid #000000;text-align:left;">&nbsp;だんだんエラーも増えてきて難しくなってきました。</td>
+             </tr><tr>
+                <td style="border:1px solid #000000;text-align:left;">&nbsp;期日：5/25<br>提出：5/25</td>
+                <td style="border:1px solid #000000;text-align:left;">&nbsp;連続丸</td>
+                <td style="border:1px solid #000000;text-align:left;">&nbsp;<a href="basic６.png">gazou６</a></td>
+                <td style="border:1px solid #000000;text-align:left;">&nbsp;</td>
             </tr>
         </tbody>
     </table>
