--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
                 <td style="border:1px solid #000000;text-align:left;">&nbsp;連続丸</td>
                 <td style="border:1px solid #000000;text-align:left;">&nbsp;<a href="basic６.png">gazou６</a></td>
                 <td style="border:1px solid #000000;text-align:left;">&nbsp;</td>
+             </tr><tr>
+                <td style="border:1px solid #000000;text-align:left;">&nbsp;期日：6/22<br>提出：6/2</td>
+                <td style="border:1px solid #000000;text-align:left;">&nbsp;p1〜p7</td>
+                <td style="border:1px solid #000000;text-align:left;">&nbsp;<a href="example1.png">gazou7</a></td>
+                <td style="border:1px solid #000000;text-align:left;">&nbsp;</td>
             </tr>
         </tbody>
     </table>
