--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
              </tr><tr>
                 <td style="border:1px solid #000000;text-align:left;">&nbsp;期日：7/13<br>提出：7/13</td>
                 <td style="border:1px solid #000000;text-align:left;">&nbsp;p23〜p30</td>
-                <td style="border:1px solid #000000;text-align:left;">&nbsp;<a href="example6.png">gazou12</a></td>
+                <td style="border:1px solid #000000;text-align:left;">&nbsp;<a href="example6.png">gazou12</a><br><a href="example7.png">gazou13</a></td>
                 <td style="border:1px solid #000000;text-align:left;">&nbsp;<a href="example7.png">gazou13</a></td>
                 <td style="border:1px solid #000000;text-align:left;">&nbsp;</td>
             </tr>
