--- a/index.html
+++ b/index.html
@@ -54,33 +54,19 @@
                 <td style="border:1px solid #000000;text-align:left;">&nbsp;</td>
              </tr><tr>
                 <td style="border:1px solid #000000;text-align:left;">&nbsp;期日：7/13<br>提出：7/13</td>
-                <td style="border:1px solid #000000;text-align:left;">&nbsp;p23〜p30</td>
-                <td style="border:1px solid #000000;text-align:left;">&nbsp;<a href="example6.png">gazou12</a><br><a href="example7.png">gazou13</a></td>
-                <td style="border:1px solid #000000;text-align:left;">&nbsp;<a href="example7.png">gazou13</a></td>
+                <td style="border:1px solid #000000;text-align:left;">&nbsp;chap1 exercize</td>
+                <td style="border:1px solid #000000;text-align:left;">&nbsp;<a href="example6.png">exesrcize1_1</a><br><a href="example7.png">exesrcize1_2</a><br><a href="example8.png">exesrcize1_5</a><br><a href="example9.png">exesrcize1_7</a></td>
                 <td style="border:1px solid #000000;text-align:left;">&nbsp;</td>
             </tr>
               <td style="border:1px solid #000000;text-align:left;">&nbsp;期日：7/20<br>提出：7/20</td>
-                <td style="border:1px solid #000000;text-align:left;">&nbsp;p23〜p30</td>
-                <td style="border:1px solid #000000;text-align:left;">&nbsp;<a href="example8.png">gazou14</a></td>
-                <td style="border:1px solid #000000;text-align:left;">&nbsp;<a href="example9.png">gazou15</a></td>
-                <td style="border:1px solid #000000;text-align:left;">&nbsp;<a href="example10.png">gazou16</a></td>
-                <td style="border:1px solid #000000;text-align:left;">&nbsp;<a href="example11.png">gazou17</a></td>
-                <td style="border:1px solid #000000;text-align:left;">&nbsp;<a href="example12.png">gazou18</a></td>
+                <td style="border:1px solid #000000;text-align:left;">&nbsp;chap2 exersize</td>
+                <td style="border:1px solid #000000;text-align:left;">&nbsp;<a href="example10.png">exesrcize2_1</a><br><a href="example11.png">exesrcize2_2</a><br><a href="example12.png">exesrcize2_3</a><br><a href="example13.png">exesrcize2_4</a></td>
                 <td style="border:1px solid #000000;text-align:left;">&nbsp;</td>
             </tr>
                         </tr>
               <td style="border:1px solid #000000;text-align:left;">&nbsp;期日：8/5<br>提出：8/5</td>
-                <td style="border:1px solid #000000;text-align:left;">&nbsp;p30~84</td>
-                <td style="border:1px solid #000000;text-align:left;">&nbsp;<a href="example13.png">gazou19</a></td>
-                <td style="border:1px solid #000000;text-align:left;">&nbsp;<a href="example14.png">gazou20</a></td>
-                <td style="border:1px solid #000000;text-align:left;">&nbsp;<a href="example15.png">gazou21</a></td>
-                <td style="border:1px solid #000000;text-align:left;">&nbsp;<a href="example16.png">gazou22</a></td>
-                <td style="border:1px solid #000000;text-align:left;">&nbsp;<a href="example17.png">gazou23</a></td>
-                <td style="border:1px solid #000000;text-align:left;">&nbsp;<a href="example18.png">gazou24</a></td>
-                <td style="border:1px solid #000000;text-align:left;">&nbsp;<a href="example19.png">gazou25</a></td>
-                <td style="border:1px solid #000000;text-align:left;">&nbsp;<a href="example20.png">gazou26</a></td>
-                <td style="border:1px solid #000000;text-align:left;">&nbsp;<a href="example21.png">gazou27</a></td>
-                <td style="border:1px solid #000000;text-align:left;">&nbsp;<a href="example22.png">gazou28</a></td>
+                <td style="border:1px solid #000000;text-align:left;">&nbsp;chap2 exersize 続き</td>
+                <td style="border:1px solid #000000;text-align:left;">&nbsp;<a href="example14.png">exesrcize2_5</a><br><a href="example15.png">exesrcize2_6</a><br><a href="example16.png">exesrcize2_7</a></td>
                 <td style="border:1px solid #000000;text-align:left;">&nbsp;</td>
         </tbody>
     </table>
